# Lab2016

./: .gitignore  README.md  Traducao-resumo_artigo.md
Aula 3/: Tutorial gdb.md  compile.sh  compiledebug.sh
Aula3/: c_helloword  compiledebug.sh
EP1/: .gitignore  CMakeLists.txt  DESCRICAO.xmind  Makefile  README.md  Relatório LSO.docx  compile.sh  estrutura da entrada.txt  process_struct.c  relatorio_memoria.md  resultado.txt  run.sh
EP1/codigo_do_ep/: RoundRobin.c  entrada.c  entrada.h  process_struct.h  simulador.c
EP1/codigo_do_ep/centralmemory/: central_memory.c  central_memory.h
EP1/codigo_do_ep/centralmemory/include/: central_memory.h
EP1/entradas/: entrada1.txt  entrada2.txt
EP1/projeto/especificacao/: estrutura da entrada.txt
EP1/src/: entrada.c  simulador.c  simulador.h
EP1/src/cpu/: FIFO.c  RoundRobin.c
EP1/src/cpu/include/: process_struct.h
EP1/src/entrada/: entrada.c  entrada.h
EP1/src/events/: EV1-NewJobs.c  EV1-NewJobs.h  EV2-MemoryAloc.c  EV2-MemoryAloc.h  EV3-CPUExec.c  EV3-CPUExec.h  EV4-ReleaseCPU.c  EV4-ReleaseCPU.h  EV5-IOExecution.c  EV5-IOExecution.h  EV6-ReleaseIO.c  EV6-ReleaseIO.h  EV7-ReleaseALL.c  EV7-ReleaseAll.h
EP1/src/memory/: central_memory.c
EP1/src/memory/include/: central_memory.h
EP1/src/messages/: messages.c  messages.h
EP1/src/utils/: utils.c  utils.h
Links Interessantes/: Comandos Linux.txt  Desenvolvendo Online.md
Planos-de-Aula/: Device Drivers kishima.md  EscalonadordeProcesso.docx  Gerenciamento de Memória.md  Plano-X-Window-System.docx  SystemStartup.docx  linux-kernel-security.md
(+13 files in other folders)
